qt/gen_qlistview.h

typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QListView QListView;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QListView* QListView_new(QWidget* parent);
QListView* QListView_new2();
QMetaObject* QListView_metaObject(const QListView* self);
void* QListView_metacast(QListView* self, const char* param1);
int QListView_metacall(QListView* self, int param1, int param2, void** param3);
struct miqt_string QListView_tr(const char* s);
struct miqt_string QListView_trUtf8(const char* s);
void QListView_setMovement(QListView* self, int movement);
int QListView_movement(const QListView* self);
void QListView_setFlow(QListView* self, int flow);
int QListView_flow(const QListView* self);
void QListView_setWrapping(QListView* self, bool enable);
bool QListView_isWrapping(const QListView* self);
void QListView_setResizeMode(QListView* self, int mode);
int QListView_resizeMode(const QListView* self);
void QListView_setLayoutMode(QListView* self, int mode);
int QListView_layoutMode(const QListView* self);
void QListView_setSpacing(QListView* self, int space);
int QListView_spacing(const QListView* self);
void QListView_setBatchSize(QListView* self, int batchSize);
int QListView_batchSize(const QListView* self);
void QListView_setGridSize(QListView* self, QSize* size);
QSize* QListView_gridSize(const QListView* self);
void QListView_setViewMode(QListView* self, int mode);
int QListView_viewMode(const QListView* self);
void QListView_clearPropertyFlags(QListView* self);
bool QListView_isRowHidden(const QListView* self, int row);
void QListView_setRowHidden(QListView* self, int row, bool hide);
void QListView_setModelColumn(QListView* self, int column);
int QListView_modelColumn(const QListView* self);
void QListView_setUniformItemSizes(QListView* self, bool enable);
bool QListView_uniformItemSizes(const QListView* self);
void QListView_setWordWrap(QListView* self, bool on);
bool QListView_wordWrap(const QListView* self);
void QListView_setSelectionRectVisible(QListView* self, bool show);
bool QListView_isSelectionRectVisible(const QListView* self);
void QListView_setItemAlignment(QListView* self, int alignment);
int QListView_itemAlignment(const QListView* self);
QRect* QListView_visualRect(const QListView* self, QModelIndex* index);
void QListView_scrollTo(QListView* self, QModelIndex* index, int hint);
QModelIndex* QListView_indexAt(const QListView* self, QPoint* p);
void QListView_doItemsLayout(QListView* self);
void QListView_reset(QListView* self);
void QListView_setRootIndex(QListView* self, QModelIndex* index);
void QListView_indexesMoved(QListView* self, struct miqt_array /* of QModelIndex* */  indexes);
void QListView_connect_indexesMoved(QListView* self, intptr_t slot);
struct miqt_string QListView_tr2(const char* s, const char* c);
struct miqt_string QListView_tr3(const char* s, const char* c, int n);
struct miqt_string QListView_trUtf82(const char* s, const char* c);
struct miqt_string QListView_trUtf83(const char* s, const char* c, int n);
bool QListView_override_virtual_metacall(void* self, intptr_t slot);
int QListView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QListView_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QListView_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QListView_override_virtual_scrollTo(void* self, intptr_t slot);
void QListView_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QListView_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QListView_virtualbase_indexAt(const void* self, QPoint* p);
bool QListView_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QListView_virtualbase_doItemsLayout(void* self);
bool QListView_override_virtual_reset(void* self, intptr_t slot);
void QListView_virtualbase_reset(void* self);
bool QListView_override_virtual_setRootIndex(void* self, intptr_t slot);
void QListView_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QListView_override_virtual_event(void* self, intptr_t slot);
bool QListView_virtualbase_event(void* self, QEvent* e);
bool QListView_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QListView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QListView_override_virtual_dataChanged(void* self, intptr_t slot);
void QListView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QListView_override_virtual_rowsInserted(void* self, intptr_t slot);
void QListView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QListView_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QListView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QListView_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QListView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
bool QListView_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QListView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QListView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QListView_virtualbase_wheelEvent(void* self, QWheelEvent* e);
bool QListView_override_virtual_timerEvent(void* self, intptr_t slot);
void QListView_virtualbase_timerEvent(void* self, QTimerEvent* e);
bool QListView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QListView_virtualbase_resizeEvent(void* self, QResizeEvent* e);
bool QListView_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QListView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* e);
bool QListView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QListView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* e);
bool QListView_override_virtual_dropEvent(void* self, intptr_t slot);
void QListView_virtualbase_dropEvent(void* self, QDropEvent* e);
bool QListView_override_virtual_startDrag(void* self, intptr_t slot);
void QListView_virtualbase_startDrag(void* self, int supportedActions);
bool QListView_override_virtual_viewOptions(void* self, intptr_t slot);
QStyleOptionViewItem* QListView_virtualbase_viewOptions(const void* self);
bool QListView_override_virtual_paintEvent(void* self, intptr_t slot);
void QListView_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QListView_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QListView_virtualbase_horizontalOffset(const void* self);
bool QListView_override_virtual_verticalOffset(void* self, intptr_t slot);
int QListView_virtualbase_verticalOffset(const void* self);
bool QListView_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QListView_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QListView_override_virtual_setSelection(void* self, intptr_t slot);
void QListView_virtualbase_setSelection(void* self, QRect* rect, int command);
QRegion* QListView_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);