qt/gen_qlistview.nim


proc fcQListView_new(parent: pointer): ptr cQListView {.importc: "QListView_new".}
proc fcQListView_new2(): ptr cQListView {.importc: "QListView_new2".}
proc fcQListView_metaObject(self: pointer, ): pointer {.importc: "QListView_metaObject".}
proc fcQListView_metacast(self: pointer, param1: cstring): pointer {.importc: "QListView_metacast".}
proc fcQListView_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QListView_metacall".}
proc fcQListView_tr(s: cstring): struct_miqt_string {.importc: "QListView_tr".}
proc fcQListView_trUtf8(s: cstring): struct_miqt_string {.importc: "QListView_trUtf8".}
proc fcQListView_setMovement(self: pointer, movement: cint): void {.importc: "QListView_setMovement".}
proc fcQListView_movement(self: pointer, ): cint {.importc: "QListView_movement".}
proc fcQListView_setFlow(self: pointer, flow: cint): void {.importc: "QListView_setFlow".}
proc fcQListView_flow(self: pointer, ): cint {.importc: "QListView_flow".}
proc fcQListView_setWrapping(self: pointer, enable: bool): void {.importc: "QListView_setWrapping".}
proc fcQListView_isWrapping(self: pointer, ): bool {.importc: "QListView_isWrapping".}
proc fcQListView_setResizeMode(self: pointer, mode: cint): void {.importc: "QListView_setResizeMode".}
proc fcQListView_resizeMode(self: pointer, ): cint {.importc: "QListView_resizeMode".}
proc fcQListView_setLayoutMode(self: pointer, mode: cint): void {.importc: "QListView_setLayoutMode".}
proc fcQListView_layoutMode(self: pointer, ): cint {.importc: "QListView_layoutMode".}
proc fcQListView_setSpacing(self: pointer, space: cint): void {.importc: "QListView_setSpacing".}
proc fcQListView_spacing(self: pointer, ): cint {.importc: "QListView_spacing".}
proc fcQListView_setBatchSize(self: pointer, batchSize: cint): void {.importc: "QListView_setBatchSize".}
proc fcQListView_batchSize(self: pointer, ): cint {.importc: "QListView_batchSize".}
proc fcQListView_setGridSize(self: pointer, size: pointer): void {.importc: "QListView_setGridSize".}
proc fcQListView_gridSize(self: pointer, ): pointer {.importc: "QListView_gridSize".}
proc fcQListView_setViewMode(self: pointer, mode: cint): void {.importc: "QListView_setViewMode".}
proc fcQListView_viewMode(self: pointer, ): cint {.importc: "QListView_viewMode".}
proc fcQListView_clearPropertyFlags(self: pointer, ): void {.importc: "QListView_clearPropertyFlags".}
proc fcQListView_isRowHidden(self: pointer, row: cint): bool {.importc: "QListView_isRowHidden".}
proc fcQListView_setRowHidden(self: pointer, row: cint, hide: bool): void {.importc: "QListView_setRowHidden".}
proc fcQListView_setModelColumn(self: pointer, column: cint): void {.importc: "QListView_setModelColumn".}
proc fcQListView_modelColumn(self: pointer, ): cint {.importc: "QListView_modelColumn".}
proc fcQListView_setUniformItemSizes(self: pointer, enable: bool): void {.importc: "QListView_setUniformItemSizes".}
proc fcQListView_uniformItemSizes(self: pointer, ): bool {.importc: "QListView_uniformItemSizes".}
proc fcQListView_setWordWrap(self: pointer, on: bool): void {.importc: "QListView_setWordWrap".}
proc fcQListView_wordWrap(self: pointer, ): bool {.importc: "QListView_wordWrap".}
proc fcQListView_setSelectionRectVisible(self: pointer, show: bool): void {.importc: "QListView_setSelectionRectVisible".}
proc fcQListView_isSelectionRectVisible(self: pointer, ): bool {.importc: "QListView_isSelectionRectVisible".}
proc fcQListView_setItemAlignment(self: pointer, alignment: cint): void {.importc: "QListView_setItemAlignment".}
proc fcQListView_itemAlignment(self: pointer, ): cint {.importc: "QListView_itemAlignment".}
proc fcQListView_visualRect(self: pointer, index: pointer): pointer {.importc: "QListView_visualRect".}
proc fcQListView_scrollTo(self: pointer, index: pointer, hint: cint): void {.importc: "QListView_scrollTo".}
proc fcQListView_indexAt(self: pointer, p: pointer): pointer {.importc: "QListView_indexAt".}
proc fcQListView_doItemsLayout(self: pointer, ): void {.importc: "QListView_doItemsLayout".}
proc fcQListView_reset(self: pointer, ): void {.importc: "QListView_reset".}
proc fcQListView_setRootIndex(self: pointer, index: pointer): void {.importc: "QListView_setRootIndex".}
proc fcQListView_indexesMoved(self: pointer, indexes: struct_miqt_array): void {.importc: "QListView_indexesMoved".}
proc fQListView_connect_indexesMoved(self: pointer, slot: int) {.importc: "QListView_connect_indexesMoved".}
proc fcQListView_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QListView_tr2".}
proc fcQListView_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QListView_tr3".}
proc fcQListView_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QListView_trUtf82".}
proc fcQListView_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QListView_trUtf83".}
proc fQListView_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QListView_virtualbase_metacall".}
proc fcQListView_override_virtual_metacall(self: pointer, slot: int) {.importc: "QListView_override_virtual_metacall".}
proc fQListView_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QListView_virtualbase_visualRect".}
proc fcQListView_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QListView_override_virtual_visualRect".}
proc fQListView_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QListView_virtualbase_scrollTo".}
proc fcQListView_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QListView_override_virtual_scrollTo".}
proc fQListView_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QListView_virtualbase_indexAt".}
proc fcQListView_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QListView_override_virtual_indexAt".}
proc fQListView_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QListView_virtualbase_doItemsLayout".}
proc fcQListView_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QListView_override_virtual_doItemsLayout".}
proc fQListView_virtualbase_reset(self: pointer, ): void{.importc: "QListView_virtualbase_reset".}
proc fcQListView_override_virtual_reset(self: pointer, slot: int) {.importc: "QListView_override_virtual_reset".}
proc fQListView_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QListView_virtualbase_setRootIndex".}
proc fcQListView_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QListView_override_virtual_setRootIndex".}
proc fQListView_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QListView_virtualbase_event".}
proc fcQListView_override_virtual_event(self: pointer, slot: int) {.importc: "QListView_override_virtual_event".}
proc fQListView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QListView_virtualbase_scrollContentsBy".}
proc fcQListView_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QListView_override_virtual_scrollContentsBy".}
proc fQListView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QListView_virtualbase_dataChanged".}
proc fcQListView_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QListView_override_virtual_dataChanged".}
proc fQListView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QListView_virtualbase_rowsInserted".}
proc fcQListView_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QListView_override_virtual_rowsInserted".}
proc fQListView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QListView_virtualbase_rowsAboutToBeRemoved".}
proc fcQListView_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QListView_override_virtual_rowsAboutToBeRemoved".}
proc fQListView_virtualbase_mouseMoveEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_mouseMoveEvent".}
proc fcQListView_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_mouseMoveEvent".}
proc fQListView_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_mouseReleaseEvent".}
proc fcQListView_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_mouseReleaseEvent".}
proc fQListView_virtualbase_wheelEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_wheelEvent".}
proc fcQListView_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_wheelEvent".}
proc fQListView_virtualbase_timerEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_timerEvent".}
proc fcQListView_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_timerEvent".}
proc fQListView_virtualbase_resizeEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_resizeEvent".}
proc fcQListView_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_resizeEvent".}
proc fQListView_virtualbase_dragMoveEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_dragMoveEvent".}
proc fcQListView_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_dragMoveEvent".}
proc fQListView_virtualbase_dragLeaveEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_dragLeaveEvent".}
proc fcQListView_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_dragLeaveEvent".}
proc fQListView_virtualbase_dropEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_dropEvent".}
proc fcQListView_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_dropEvent".}
proc fQListView_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QListView_virtualbase_startDrag".}
proc fcQListView_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QListView_override_virtual_startDrag".}
proc fQListView_virtualbase_viewOptions(self: pointer, ): pointer{.importc: "QListView_virtualbase_viewOptions".}
proc fcQListView_override_virtual_viewOptions(self: pointer, slot: int) {.importc: "QListView_override_virtual_viewOptions".}
proc fQListView_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QListView_virtualbase_paintEvent".}
proc fcQListView_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QListView_override_virtual_paintEvent".}
proc fQListView_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QListView_virtualbase_horizontalOffset".}
proc fcQListView_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QListView_override_virtual_horizontalOffset".}
proc fQListView_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QListView_virtualbase_verticalOffset".}
proc fcQListView_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QListView_override_virtual_verticalOffset".}
proc fQListView_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QListView_virtualbase_moveCursor".}
proc fcQListView_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QListView_override_virtual_moveCursor".}
proc fQListView_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QListView_virtualbase_setSelection".}
proc fcQListView_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QListView_override_virtual_setSelection".}
proc fQListView_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QListView_virtualbase_visualRegionForSelection".}
